[project]
name = "live-voice-image-editor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastrtc[stt]>=0.0.30",
    "kokoro-onnx>=0.4.9",
    "langchain-groq>=0.3.7",
    "langchain-ollama>=0.3.7",
    "langgraph>=0.6.6",
    "loguru>=0.7.3",
    "ollama>=0.5.3",
    "python-dotenv>=1.1.1",
    "replicate>=1.0.7",
]
